# sdl

./: CMakeLists.txt  LICENSE  README.md  main.cpp  make.bat  sdl.sln  sdl.vcxproj  sdl.vcxproj.filters
Debug/: sdl.exe.recipe  sdl.ilk  sdl.vcxproj.FileListAbsolute.txt  vc142.idb
Debug/sdl.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  CopyFile.command.1.tlog  CopyFile.read.1.tlog  CopyFile.write.1.tlog  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog  sdl.lastbuildstate
src/: demo.bak  main.cpp  main.h
src/Scene/: BaseScene.cpp  BaseScene.h  MainScene.cpp  MainScene.h
src/Utils/: Animation.cpp  Animation.h  Sprite.cpp  Sprite.h
src/include/: BaseScene.h  MainScene.h  main.h
